Try to fix the module requires libraries